--- a/_data/navigation.yaml
+++ b/_data/navigation.yaml
@@ -5,7 +5,7 @@ primary_navigation:
     - name: Tools
       children:
         - name: Health Tracker
-          url: "..."
+          url: https://airtable.com/shrsMy2dpZDPbWTXW
         - name: Scoring Rubric 
           url: /rubric/
     - name: Syllabus
@@ -18,19 +18,6 @@ primary_navigation:
           url: /courses/1/overview/
         - name: Course Two
           url: /courses/2/overview/
-      
-    # - name: Document
-    #   url: /document/
-    # - name: Document with sidenav
-    #   url: /document-with-sidenav/
-    # - name: Document submenu
-    #   children:
-    #     - name: Navigation link
-    #       url: "#main-content"
-    #     - name: Navigation link
-    #       url: "#main-content"
-    #     - name: Navigation link
-    #       url: "#main-content"
   
 secondary_navigation:
     - name: Secondary link
