--- a/_config.yml
+++ b/_config.yml
@@ -19,14 +19,11 @@
 ##########################################################################################
 
 title: State Officer, M.D.
-email: contact@example.gov
-description: >- # this means to ignore newlines until "baseurl:"
-  Agency Name (EAC) Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-  Aenean et sapien a leo auctor scelerisque quis nec magna. Sed dictum ante a risus vehicula facilisis.
-baseurl: "" # the subpath of your site, e.g. /blog
+email: matthew.jadud@gsa.gov
+description: >-
+  Pilot materials supporting CMS/SOs in using the Health Tracker.
+baseurl: "" 
 # url: "https://example.gov" # the base hostname & protocol for your site, e.g. http://example.com
-
-# Twitter handle. Only the handle, not the URL.
 twitter: 18F
 
 #################################################################
@@ -64,14 +61,11 @@ twitter: 18F
 #################################################################
 dap:
   # agency: your-agency
-
   # Optional
   # subagency: your-subagency
-
 # Configuration for Google Analytics
 ga:
   # ua: your-ua
-
 
 # Search.gov configuration
 #
