--- a/_data/navigation.yaml
+++ b/_data/navigation.yaml
@@ -2,28 +2,44 @@
 primary_navigation:
     - name: Home
       url: /
-    - name: Tools
-      children:
-        - name: Health Tracker
-          url: https://airtable.com/shrsMy2dpZDPbWTXW
-        - name: Health Rubric 
-          url: /rubric/
+    # - name: Tools
+    #   children:
+    #     - name: Health Tracker
+    #       url: https://airtable.com/shrsMy2dpZDPbWTXW
+    #     - name: Health Rubric 
+    #       url: /rubric/
     - name: Syllabus
       url: /syllabus/
     - name: Resources
       url: /resources/
     - name: Courses
       children:
-        - name: Course One
+        - name: Course One -
           url: /courses/1/overview/
         - name: Course Two
           url: /courses/2/overview/
-  
+
+courseone:
+  children: 
+    - name: Overview
+      url: /courses/1/overview/
+    - name: Kickoff
+      url: /1/kickoff/
+    - name: Outcomes & Orientation
+      url: /1/outcomes/
+    - name: State Capacity
+      url: /1/capacity/
+    - name: Procurement Flexibility
+      url: /1/procurement/
+    - name: Iterative Development
+      url: /1/development/
+
 secondary_navigation:
-    - name: Secondary link
-      url: "#main-content"
-    - name: Another secondary link
-      url: "#main-content"
+    - name: Rubric
+      url: "/rubric/"
+    - name: Tracker
+      url: "https://airtable.com/shrsMy2dpZDPbWTXW"
+      external: true
 
 syllabus:
     - name: Contact
