--- a/admin/config.yml
+++ b/admin/config.yml
@@ -66,7 +66,7 @@ collections:
         label: "Indicator", 
         name: "indicator", 
         widget: "select", 
-        options: ["Outcomes & Orientation", "State Capacity", "Procurement Flexibility", "Iterative Development", "Admin"]
+        options: ["outcomes", "capacity", "procurement", "development", "admin"]
         }
       - {
         label: "Priority", 
