Updated to align naming with Netlify.

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -63,7 +63,7 @@ collections:
         }
       - {
         label: "Visibility", 
-        name: "visibility", 
+        name: "visible", 
         widget: "boolean", 
         default: true
         }
