--- a/admin/config.yml
+++ b/admin/config.yml
@@ -11,7 +11,7 @@ backend:
   base_url: https://federalistapp.18f.gov
   auth_endpoint: external/auth/github
   preview_context: federalist/build
-  branch: jadudm
+  branch: main
 
 # See https://www.netlifycms.org/docs/beta-features/
 # local_backend: true
