--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,8 @@
-version: '3'
+version: "3"
 services:
-  node:
-    image: node:12
-    working_dir: /app
-    volumes:
-      - .:/app:delegated
-  ruby:
+  web:
     build: .
-    working_dir: /app
     ports:
       - "4000:4000"
     volumes:
-      - .:/app:delegated
-    command: bundle exec jekyll serve --host 0.0.0.0
+      - .:/usr/src/app
