--- a/_data/resources.yaml
+++ b/_data/resources.yaml
@@ -57,6 +57,15 @@ web:
           url: https://stackify.com/measuring-software-development-productivity/
           note: |
             From the author: When it comes to evaluating the productivity of your development teams, what metrics matter most? Should you merely be concerned with deadlines and time sheets, or should you focus on customer satisfaction to evaluate team performance?
+        - title: The Joel Test: 12 Steps to Better Code
+          uid: thejoeltest
+          author: Joel Spolsky
+          url: https://www.joelonsoftware.com/2000/08/09/the-joel-test-12-steps-to-better-code/
+          note: |
+            From the author: Have you ever heard of SEMA? It’s a fairly esoteric system for measuring how good a software team is. No, wait! Don’t follow that link! It will take you about six years just to understand that stuff. So I’ve come up with my own, highly irresponsible, sloppy test to rate the quality of a software team. The great part about it is that it takes about 3 minutes. With all the time you save, you can go to medical school.
+
+
+
 
 
 
@@ -110,6 +119,13 @@ videos:
         duration: 15m59s
         note: |
           From the Author: Here's our list of the top 12 project management jargon terms. Among this list, are the terms project managers use most often. And, if you are going to manage projects, I'd certainly say these are among the most important project management terms for you to know.
+      - title: Should You Really Measure Progress On Software Projects?
+        uid: syrmposp
+        author: Healthy Software Developer
+        url: https://www.youtube.com/watch?v=0yxfb-drlE4
+        duration: 7m55s
+        note: |
+          From the author: There’s an old saying “you improve what you focus on, and you focus on what you measure”.
 
 
 slidedecks:
