--- a/_data/resources.yaml
+++ b/_data/resources.yaml
@@ -57,7 +57,7 @@ web:
           url: https://stackify.com/measuring-software-development-productivity/
           note: |
             From the author: When it comes to evaluating the productivity of your development teams, what metrics matter most? Should you merely be concerned with deadlines and time sheets, or should you focus on customer satisfaction to evaluate team performance?
-        - title: The Joel Test: 12 Steps to Better Code
+        - title: "The Joel Test: 12 Steps to Better Code"
           uid: thejoeltest
           author: Joel Spolsky
           url: https://www.joelonsoftware.com/2000/08/09/the-joel-test-12-steps-to-better-code/
