Fixing external link to tracker.

--- a/_data/navigation.yaml
+++ b/_data/navigation.yaml
@@ -24,6 +24,7 @@ secondary_navigation:
       url: "/rubric/"
     - name: Tracker
       url: "https://airtable.com/shrsMy2dpZDPbWTXW"
+      external: true
 
 syllabus:
     - name: Contact
