--- a/_data/resources.yaml
+++ b/_data/resources.yaml
@@ -63,7 +63,7 @@ web:
           url: https://www.joelonsoftware.com/2000/08/09/the-joel-test-12-steps-to-better-code/
           note: |
             From the author: Have you ever heard of SEMA? It’s a fairly esoteric system for measuring how good a software team is. No, wait! Don’t follow that link! It will take you about six years just to understand that stuff. So I’ve come up with my own, highly irresponsible, sloppy test to rate the quality of a software team. The great part about it is that it takes about 3 minutes. With all the time you save, you can go to medical school.
-        - title: The 18F Derisking Guide
+        - title: "The 18F De-risking Guide"
           uid: deriskingguide
           author: 18F
           url: https://derisking-guide.18f.gov/
@@ -77,7 +77,7 @@ web:
             A collection of tools to bring human-centered design into your project.
         - title: The 18F State Field Guide
           uid: statefieldguide
-          author: Robin Carnahan, Randy Hart, Waldo Jaquith
+          author: "Robin Carnahan, Randy Hart, Waldo Jaquith"
           url: https://derisking-guide.18f.gov/state-field-guide/
           note: |
             Technical knowledge is cheap and abundant, but knowing how to run a state agency is a rare and valuable skill. Government must embrace and own its responsibility and risk of failure, recognizing that technology vendors are hired only to help and should be easily replaceable if they don’t deliver.
