outcomes-orientation fix

--- a/_data/rubric.yaml
+++ b/_data/rubric.yaml
@@ -1,4 +1,4 @@
-- header: Outcomes / Orientation
+- header: Outcomes-orientation
   question: Are efforts clearly connected to intended outcomes and end users?
   wtm: Outcomes-oriented Medicaid IT teams have a clear, program-driven direction. As a result, they more promptly identify and address issues that can impact progress and make smart tradeoffs in their day-to-day work.
   priorities:
