Corrections, minor changes.
These are cleanups.

* _config changes for the new collections, turning off pagination.
* Nav addition of new course ("Course Three")
* Removal of HTML from rubric tags, as well as additional/new tags to
  help with code generation.
* Removal of `puts` statements from plugin.

--- a/_data/navigation.yaml
+++ b/_data/navigation.yaml
@@ -16,6 +16,8 @@ primary_navigation:
           url: /course/one/overview/
         - name: Course Two
           url: /course/two/overview/
+        - name: Course Three
+          url: /course/three/overview/
     - name: Resources
       children:
         - name: Agile Practices
