--- a/_config.yml
+++ b/_config.yml
@@ -29,16 +29,22 @@ twitter: 18F
 
 collections_dir: collections
 collections:
-  one:
+  rubric:
     output: true
-    # Path so that course/name works from Netlify.
-    permalink: /course/one/:slug/
-    sort_by: lesson
-  two:
+    permalink: /rubric/:slug
+  courses:
     output: true
-    # Path so that course/name works from Netlify.
-    permalink: /course/two/:slug/
-    sort_by: lesson
+    permalink: /course/:path
+  # one:
+  #   output: true
+  #   # Path so that course/name works from Netlify.
+  #   permalink: /course/one/:slug/
+  #   sort_by: lesson
+  # two:
+  #   output: true
+  #   # Path so that course/name works from Netlify.
+  #   permalink: /course/two/:slug/
+  #   sort_by: lesson
   pages:
     output: true
     permalink: /:name/
@@ -123,7 +129,7 @@ plugins:
 # The values here represent the defaults if nothing is set
 pagination:
   # Site-wide kill switch, disabled here it doesn't run at all
-  enabled: true
+  enabled: false
   # Set to 'true' to enable pagination debugging. This can be enabled in the site config or only for individual pagination pages
   debug: false
   # The default document collection to paginate if nothing is specified ('posts' is default)
