--- a/_data/navigation.yaml
+++ b/_data/navigation.yaml
@@ -1,13 +1,6 @@
-# Site Navigation
 primary_navigation:
     - name: Home
       url: /
-    # - name: Tools
-    #   children:
-    #     - name: Health Tracker
-    #       url: https://airtable.com/shrsMy2dpZDPbWTXW
-    #     - name: Health Rubric 
-    #       url: /rubric/
     - name: Syllabus
       url: /syllabus/
     - name: Courses
@@ -29,13 +22,7 @@ primary_navigation:
 
 secondary_navigation:
     - name: Rubric
-      url: "/rubric/"
+      url: /rubric/
     - name: Tracker
-      url: "https://airtable.com/shrsMy2dpZDPbWTXW"
+      url: https://airtable.com/shrsMy2dpZDPbWTXW
       external: true
-
-syllabus:
-    - name: Contact
-      url: blah
-    - name: Bar
-      url: blah
