--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ ga:
 
 markdown: kramdown
 plugins:
-  - jekyll-feed
-  - jekyll-paginate-v2
+  # - jekyll-feed
+  # - jekyll-paginate-v2
   - jekyll-redirect-from
   - jekyll-sitemap
   - jekyll-seo-tag
