--- a/_data/navigation.yaml
+++ b/_data/navigation.yaml
@@ -24,5 +24,5 @@ secondary_navigation:
     - name: Rubric
       url: /rubric/
     - name: Tracker
-      url: https://airtable.com/shrsMy2dpZDPbWTXW
+      url: "https://airtable.com/shrsMy2dpZDPbWTXW"
       external: true
