added course 4 to the nav

--- a/_data/navigation.yaml
+++ b/_data/navigation.yaml
@@ -11,6 +11,8 @@ primary_navigation:
           url: /courses/two/overview/
         - name: Course Three
           url: /courses/three/overview/
+        - name: Course Four
+          url: /courses/four/overview/
     - name: Resources
       children:
         - name: Agile Practices
