--- a/_data/rubric.yaml
+++ b/_data/rubric.yaml
@@ -120,6 +120,12 @@
           red: The state blames or relies on the vendor for the strategy and achievement of the outcomes.
           yellow: The state takes partial accountability for the strategy and achievement of the outcomes; leans on vendors for procurement strategy.
           green: The state considers themselves wholly responsible for the strategy and achievement of the outcomes; leads strategy, collects feedback from vendors.
+        - id: pf3.2
+          tips:
+            - Ask team leads and contract owners how they monitor vendor budget.
+          red: The state has little of no regular visibility into how the vendor is billing.
+          yellow: The state has visibility into how the vendor is billing but is uncertain how to manage if a vendor is burning too hot.
+          green: The state has regular converstion with vendor about burn rate.
 - header: Iterative Development
   question: Does the state use iterative, secure development practices?
   wtm: More important than any individual practice or technique, healthy design and development teams are able to iterate quickly by 1) identifying process failures and opportunities for improvement, and 2) adjusting and improving their approach accordingly, in real time. <br>&nbsp;<br> The more insight a state has, the better able they are at identifying whether they are on track or not. One tool states use for this is <i>testing</i>. There are many different types of testing. CMS is in the process of releasing new testing guidance to teams.
