added kickoff to syllabus drop-down

--- a/_data/navigation.yaml
+++ b/_data/navigation.yaml
@@ -3,6 +3,9 @@ primary_navigation:
       url: /
     - name: Syllabus
       url: /syllabus/
+      children:
+          - name: Course Overview
+            url: /courses/one/kickoff/ 
     - name: Courses
       children:
         - name: Course One
